# Tracker-Application

./: README.md
tracker/: pyproject.toml
tracker/k8s/local_deployment/: README.md  deployment.yaml  poi_aws_secret.yaml  postgres_secrets.yaml
tracker/tests/: test_load_data.py  test_tracker.py
tracker/tracker/: __init__.py  app.py  configurations.py  constants.py  get_initial_persons.py  graph_db.py.py  load_data.py  main.py  manage_tables.py  model.py  send_notification.py  session_helper.py  utils.py  visualise_data.py
tracker/tracker/sample_db/: data.db
tracker/tracker/sample_files/: identity_data.csv  location_data.csv  tracker_data.csv
tracker/tracker/templates/: exception.html  index.html  load.html  success_update.html  thanks.html  tracker.html  tracker_results.html
