[tool.poetry]
name = "tracker"
version = "0.1.0"
description = ""
authors = ["abc.com"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.18"
networkx = "^2.4"
matplotlib = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
